# Deploy

./: .gitignore  README.md
.github/workflows/: ci.yml
interview-agent/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
interview-agent/deploy/: deploy.sh  docker-compose.yml
interview-agent/deploy/nginx/: nginx.conf
interview-agent/src/interview_agent/: __init__.py  agent.py  auth.py  config.py  db.py  jd_parser.py  logging_config.py  main.py  mcp_client.py  migrate.py  prompts.py  server.py  session.py
interview-agent/tests/: conftest.py  test_auth.py  test_config.py  test_jd_parser.py  test_mcp_client.py  test_prompts.py  test_server.py  test_session.py
interview-agent/web/: index.html  vite.config.ts
interview-agent/web/src/: App.tsx  api.ts  index.css
interview-tester/: .env.example  .gitignore  README.md  pyproject.toml
interview-tester/src/interview_tester/: candidate.py  config.py  evaluator.py  logging_config.py  main.py  recorder.py  schemas.py  server.py  suite.py  utils.py
interview-tester/suites/: full_coverage.yaml  jd_profile_test.yaml  quick_coverage.yaml  style_challenge.yaml
interview-tester/tests/: conftest.py  test_candidate.py  test_evaluator.py  test_recorder.py  test_schemas.py  test_suite.py  test_utils.py
interview-tester/web/: index.html
interview-vectordb/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
interview-vectordb/src/interview_vectordb/: __init__.py  __main__.py  api.py  cli.py  config.py  db.py  logging_config.py  schema.py  server.py
interview-vectordb/tests/: conftest.py  test_api.py  test_config.py  test_db.py  test_schema.py
