[project]
name = "interview-tester"
version = "0.1.0"
description = "Test agent for interviewing the interview simulation Agent"
requires-python = ">=3.11"
dependencies = [
    "interview-agent",
    "langchain-openai>=0.3.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "sse-starlette>=2.0.0",
]

[project.scripts]
interview-tester = "interview_tester.main:main"
interview-tester-server = "interview_tester.server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/interview_tester"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
interview-agent = { path = "../interview-agent", editable = true }
